# server-trojan-rs

./: .gitignore  Cargo.toml
.cert/: ca.crt  ca.key  server.crt  server.key
.github/workflows/: ci.yml  release.yml
docs/superpowers/plans/: 2026-04-12-server-panel-rs-http.md  2026-04-12-server-r-panel-http.md
src/: acl.rs  config.rs  handler.rs  main.rs  net.rs  server_runner.rs
src/business/: mod.rs
src/business/api/: client.rs  tasks.rs
src/core/: hooks.rs  relay.rs
