[package]
name = "server-trojan-r"
version = "0.2.17"
edition = "2021"

[dependencies]
tokio = { version = "1.49", features = ["full", "signal"] }
tokio-tungstenite = "0.28"
futures-util = "0.3"
sha2 = "0.10"
anyhow = "1.0"
bytes = "1.11"
hex = "0.4"
clap = { version = "4.5", features = ["derive", "env"] }
humantime = "2.1"
chrono = { version = "0.4", features = ["serde"] }
tokio-rustls = "0.26.4"
rustls = { version = "0.23.36", features = ["aws_lc_rs"] }
rustls-pemfile = "2.2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "1.0"
tonic = "0.14"
tokio-stream = "0.1.18"
h2 = "0.4.13"
http = "1.4.0"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["tracing-log", "std", "local-time", "fmt", "ansi"] }
time = { version = "0.3", features = ["macros", "local-offset"] }
tokio-util = "0.7"
scopeguard = "1.2.0"
dashmap = "6.1"
tikv-jemallocator = "0.6"
async-trait = "0.1"
arc-swap = "1"

# ACL Engine (remote)
acl-engine-r = { git = "https://github.com/xflash-panda/acl-engine-r.git", tag = "v0.4.1", features = ["async"] }

# Panel gRPC Client
server-r-agent-proto = { git = "https://github.com/xflash-panda/server-r-agent-proto.git", tag = "v0.1.2" }
server-r-client = { git = "https://github.com/xflash-panda/server-r-client.git", tag = "v0.1.8" }
hostname = "0.4"
socket2 = "0.6"

[[bin]]
name = "server-trojan"
path = "src/main.rs"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.15"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
