[package]
name = "server-trojan-rs"
version = "0.2.29"
edition = "2021"

[dependencies]
tokio = { version = "1.49", features = ["full", "signal"] }
tokio-tungstenite = "0.29"
futures-util = "0.3"
anyhow = "1.0"
bytes = "1.11"
clap = { version = "4.6", features = ["derive", "env"] }
humantime = "2.1"
tokio-rustls = "0.26.4"
rustls = { version = "0.23.36", features = ["aws_lc_rs"] }
rustls-pemfile = "2.2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "1.0"
h2 = "0.4.13"
http = "1.4.0"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["tracing-log", "std", "local-time", "fmt", "ansi"] }
time = { version = "0.3", features = ["macros", "local-offset"] }
tokio-util = "0.7"
scopeguard = "1.2.0"
dashmap = "6.1"
tikv-jemallocator = "0.6"
async-trait = "0.1"
arc-swap = "1"
libc = "0.2"

# ACL Engine (remote)
acl-engine-rs = { git = "https://github.com/xflash-panda/acl-engine-rs.git", tag = "v0.4.4", features = ["async"] }

# Panel Integration (connect-rpc via QUIC/H3)
panel-core = { git = "https://github.com/xflash-panda/server-panel-rs", tag = "v0.1.13" }
panel-connect-rpc = { git = "https://github.com/xflash-panda/server-panel-rs", tag = "v0.1.13" }
socket2 = "0.6"

[[bin]]
name = "server-trojan-agent"
path = "src/main.rs"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.15"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
